objects/TNT_Integration__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <fields>
        <fullName>Booking_Service__c</fullName>
        <label>Booking Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consignment_Details_Service__c</fullName>
        <label>Consignment Details Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consignment_Items_Service__c</fullName>
        <label>Consignment Items Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Service__c</fullName>
        <label>Quote Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Search_Consignment_Page_Size__c</fullName>
        <label>Search Consignment Page Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Search_Consignment_Service__c</fullName>
        <label>Search Consignment Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timeout__c</fullName>
        <defaultValue>65000</defaultValue>
        <description>timeout in milliseconds</description>
        <inlineHelpText>timeout in milliseconds</inlineHelpText>
        <label>Timeout</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>TNT Integration</label>
</CustomObject>